# habitd

./: .gitignore  README.md  pyproject.toml
config/: config.yaml  habitd.rules
src/habitd/: __init__.py  __main__.py  alert.py  config.py  daemon.py  db.py  detection.py  events.py  utils.py
src/habitd/sources/: __init__.py  audisp.py  base.py  logparse.py
systemd/: habitd.service
tests/: test_detection.py
wazuh/: agent_localfile.xml  habitd_rules.xml
